1.3.8 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #15976: ImageMagick based scalePercent filter now allows values
  > 100 for the width value, too.

1.3.7 - Monday 22 June 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #15011: Corrected determining of ImageMagick binary from
  settings.


1.3.6 - Monday 11 May 2009
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #14810: Exceptions are now thrown correctly with corrupt JPEGs.


1.3.5 - Monday 16 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #13134: Fixed array_splice() call in
  ezcImageTransformation->addFilter().


1.3.4 - Monday 05 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12592: New thumbnail filter. Documentation about the scale()
  filter has been added to the thumbnail filters.
- Fixed issue #12667: ezcImageConverter doesn't pass saveOptions to
  ezcImageTransformation.
- Fixed issue #12671: Unhandled exception in ezcImageTransformation. Checks to
  avoid double throwing of exceptions have been introduced. Additional
  parameter checks are performed.


1.3.3 - Monday 17 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12166: Undefined attribute in ezcImageImagemagickBaseHandler.


1.3.2 - Wednesday 05 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12126: ImageConversion test is incorrect.
- Fixed issue #12160: Conversion of transparent backgrounds does not work on
  certain systems.
- Fixed issue #12171: Monochrome colorspace conversion does not work on some
  systems with the ImageMagick handler.


1.3.1 - Wednesday 28 November 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^